--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "jet-logger": "^1.0.4",
     "jsonfile": "^6.1.0",
     "module-alias": "^2.2.2",
+    "mongoose": "^5.11.9",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
@@ -80,6 +81,7 @@
     "@types/fs-extra": "^9.0.6",
     "@types/jasmine": "^3.6.2",
     "@types/jsonfile": "^6.0.0",
+    "@types/mongoose": "^5.10.3",
     "@types/morgan": "^1.9.2",
     "@types/node": "^14.14.16",
     "@types/supertest": "^2.0.10",
