Wrote album service

--- a/src/pre-start/env/development.env
+++ b/src/pre-start/env/development.env
@@ -6,6 +6,11 @@ NODE_ENV=development
 PORT=3000
 HOST=localhost
 
+AWS_ACCESS_KEY_ID=AKIAXXDO4KHWFA7WF6VP
+AWS_SECRET_ACCESS_KEY=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
+AWS_REGION=us-east-2
+AWS_BUCKET_NAME=rich-oak-test
+
 
 ## Setup jet-logger ##
 JET_LOGGER_MODE=CONSOLE
