--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "aws-sdk": "^2.818.0",
     "command-line-args": "^5.1.1",
     "cookie-parser": "^1.4.5",
+    "crypto-random-string": "^3.3.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
