--- a/package.json
+++ b/package.json
@@ -72,7 +72,8 @@
     "jsonfile": "^6.1.0",
     "module-alias": "^2.2.2",
     "mongoose": "^5.11.9",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "multer": "^1.4.2"
   },
   "devDependencies": {
     "@types/command-line-args": "^5.0.0",
