Refactored album service

--- a/src/pre-start/env/development.env
+++ b/src/pre-start/env/development.env
@@ -11,6 +11,8 @@ AWS_SECRET_ACCESS_KEY=U3bLRU5/7uWhU8IeBxBrQtdaKR6nQriNyilQz5Kn
 AWS_REGION=us-east-2
 AWS_BUCKET_NAME=rich-oak-test
 
+DB_URL=music-app
+
 
 ## Setup jet-logger ##
 JET_LOGGER_MODE=CONSOLE
