--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "@types/jsonfile": "^6.0.0",
     "@types/mongoose": "^5.10.3",
     "@types/morgan": "^1.9.2",
+    "@types/multer": "^1.4.5",
     "@types/node": "^14.14.16",
     "@types/supertest": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^4.11.1",
