Cleaned up repo and added updated production env

--- a/src/pre-start/env/production.env
+++ b/src/pre-start/env/production.env
@@ -1,14 +1,21 @@
 ## Environment ##
-NODE_ENV=production
+NODE_ENV=development
 
 
 ## Server ##
-PORT=8081
+PORT=3000
 HOST=localhost
+
+AWS_ACCESS_KEY_ID=AKIAXXDO4KHWFA7WF6VP
+AWS_SECRET_ACCESS_KEY=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
+AWS_REGION=us-east-2
+AWS_BUCKET_NAME=rich-oak-test
+
+DB_URL=mongodb://localhost:27017/music-app
 
 
 ## Setup jet-logger ##
-JET_LOGGER_MODE=FILE
+JET_LOGGER_MODE=CONSOLE
 JET_LOGGER_FILEPATH=jet-logger.log
 JET_LOGGER_TIMESTAMP=TRUE
 JET_LOGGER_FORMAT=LINE
